// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen gvpResellers config import-export] should create the gvpResellers: the gvpResellers have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ gvpreseller [Environment/cfgObjectTest]
Completed. 1 object created. 0 object updated. 0 object skipped.
",
}
`;

exports[`[mutagen gvpResellers config import-export] should skip the same gvpResellers: the gvpResellers have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "= gvpreseller [Environment/cfgObjectTest]
Completed. 0 object created. 0 object updated. 1 object skipped.
",
}
`;

exports[`[mutagen gvpResellers config import-export] should update the modified gvpResellers: the modified gvpResellers have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ gvpreseller [Environment/cfgObjectTest]
Completed. 0 object created. 1 object updated. 0 object skipped.
",
}
`;
